k8s/build/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upi-forecaster-deployment
  namespace: project
  labels:
    app: upi-forecaster
spec:
  replicas: 2
  selector:
    matchLabels:
      app: upi-forecaster
  template:
    metadata:
      labels:
        app: upi-forecaster

    spec:
      containers:
      - name: upi-forecaster-container
        image: forecaster:v5
        imagePullPolicy: IfNotPresent
        ports:
        - name: backend-port
          containerPort: 8000
        - name: frontend-port
          containerPort: 8501
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 20
          periodSeconds: 120
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 20
          periodSeconds: 120
