k8s/build/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: upi-forecaster-service
  namespace: project
spec:
  selector:
    app: upi-forecaster
  ports:
    - name: backend-service
      protocol: TCP
      port: 8000                     
      targetPort: 8000               
    - name: frontend-service
      protocol: TCP
      port: 8501                      
      targetPort: 8501
  type: ClusterIP
