k8s/build/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: upi-forecaster-ingress
  namespace: project
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: api.forecaster.local
    http:
      paths:
      - path: /forecast
        pathType: Prefix
        backend:
          service:
            name: upi-forecaster-service
            port:
              number: 8000
      - path: /docs
        pathType: Prefix
        backend:
          service:
            name: upi-forecaster-service
            port:
              number: 8000
      - path: /openapi.json
        pathType: Prefix
        backend:
          service:
            name: upi-forecaster-service
            port:
              number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: upi-forecaster-service
            port:
              number: 8501
